--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mongodb": "^2.2.12",
     "mongoose": "^4.7.1",
     "morgan": "~1.7.0",
+    "rand-token": "^0.3.0",
     "serve-favicon": "~2.3.0"
   }
 }
