--- a/package.json
+++ b/package.json
@@ -1,20 +1,15 @@
 {
-  "name": "marti-study-room",
-  "version": "0.0.0",
-  "private": true,
+  "name": "front",
+  "version": "1.0.0",
+  "description": "",
+  "main": "scripts.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "body-parser": "~1.15.1",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.2.0",
-    "express": "~4.13.4",
-    "jade": "~1.11.0",
-    "mongodb": "^2.2.12",
-    "mongoose": "^4.7.1",
-    "morgan": "~1.7.0",
-    "rand-token": "^0.3.0",
-    "serve-favicon": "~2.3.0"
+    "connect": "^3.5.0",
+    "serve-static": "^1.11.1"
   }
 }
